pkl-core/src/test/files/LanguageSnippetTests/input/errors/functionNotFoundInModule.pkl
function bar(x) = x

res1 = module.baz(42)